<resources>
    <string name="app_name">My Recherche Emploi</string>


    <string name="home">Accueil</string>

    <string name="format_date">dd/MM/yy</string>

    <string name="error">error</string>
    <string name="select">Sélectionner</string>

    <string name="text_name">Nom</string>
    <string name="text_prenom">Prenom</string>
    <string name="text_tel">Tel</string>
    <string name="text_email">Email</string>
    <string name="text_adresse">Adresse</string>
    <string name="text_cp">CP</string>
    <string name="text_ville">Ville</string>

    <string name="text_detail">Detail</string>
    <string name="text_heure">Heure</string>
    <string name="text_date">Date</string>
    <string name="text_my_datas">Mes Données</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_DB_created">Creation BD terminée</string>

</resources>
