<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.afficher.AfficherSocieteActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Ajouter Societe" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/text_name"
                android:minWidth="250dip"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/icons8_categories">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:chipSpacingHorizontal="10dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEsn"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Esn"
                        app:closeIconVisible="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipClient"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Client"
                        app:closeIconVisible="false" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="false"
                    app:chipSpacingHorizontal="10dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPremierContact"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="1er Contact"
                        app:closeIconVisible="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEntretienRH"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="RH"
                        app:closeIconVisible="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEntretienTechnique"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Technique"
                        app:closeIconVisible="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEntretienManager"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Manager"
                        app:closeIconVisible="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEntretienAffaire"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Affaire"
                        app:closeIconVisible="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipTestTechnique"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Test Tech"
                        app:closeIconVisible="false" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutAdresse"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/text_adresse"
                android:minWidth="250dip"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/icons8_categories">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textAdresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/text_cp"
                android:minWidth="250dip"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/icons8_categories">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textCp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutVille"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/text_ville"
                android:minWidth="250dip"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/icons8_categories">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textVille"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSave"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="16dip"

                app:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/outline_save_black_24dp"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabModify"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="16dip"

                app:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/outline_save_black_24dp"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabDelete"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="16dip"

                app:backgroundTint="@color/colorPrimary"
                app:srcCompat="@drawable/outline_delete_black_24dp"
                app:tint="@android:color/white" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_main_nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_accueil_nav_header"
        app:menu="@menu/activity_accueil_menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
